# sdl3-rasterizer

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
graphics/: CMakeLists.txt
graphics/inc/graphics/: Window.hpp
graphics/src/: Window.cpp
samples/: CMakeLists.txt  imgui.ini
samples/01-ClearScreen/: CMakeLists.txt  main.cpp
samples/02-ImGui/: CMakeLists.txt  main.cpp
